Fix shift width for the nth time.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -76,7 +76,7 @@ body {
 
 .schedulecontent {
   display: inline-block;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   overflow-y: scroll;
 }
